chore: change department name

--- a/apps/docs/docs/getting_started/welcome.mdx
+++ b/apps/docs/docs/getting_started/welcome.mdx
@@ -4,7 +4,7 @@ title: Welcome
 
 KlickerUZH is a web application that supports the interaction between lecturers and their audience in various ways. In a KlickerUZH live quiz (e.g., during a lecture), a speaker may pose questions to be answered by participants over their devices. If so desired by the speaker, the audience may ask questions to which the lecturer can leave a response from within the tool (Live Q&A). KlickerUZH further supports asynchronous interactions (i.e., outside of class) like microlearning and and practice quizzes, as well as collaborative activities (e.g., group activity).
 
-The platform is being developed by the Teaching Center of the Department of Banking and Finance at the University of Zurich, Switzerland. The development and planning roadmap are entirely open-source, allowing for further extensibility and collaboration. This documentation is thought to provide both a helpful guide to users of the KlickerUZH, as well as the necessary information for anyone thinking about contributing to the project or deploying it on their own infrastructure.
+The platform is being developed by the Teaching Center of the Department of Finance at the University of Zurich, Switzerland. The development and planning roadmap are entirely open-source, allowing for further extensibility and collaboration. This documentation is thought to provide both a helpful guide to users of the KlickerUZH, as well as the necessary information for anyone thinking about contributing to the project or deploying it on their own infrastructure.
 
 ## User Guide
 
