enhance(apps/docs): enhance documentation to cover group activity

--- a/apps/docs/docs/student_tutorials/groups_activities.mdx
+++ b/apps/docs/docs/student_tutorials/groups_activities.mdx
@@ -2,8 +2,24 @@
 title: Groups and Group Activities - Student View
 ---
 
+## Creating / Joining Groups and Group Activities
+
 While students compete in leaderboards against each other when collecting points from live quizzes, practice quizzes and microlearnings, KlickerUZH also covers efforts to promote collaboration and teamwork. This section describes the student view of groups and group activities. To create them from the lecturer view, check out the [corresponding section](/tutorials/group_activity/).
 
-Through a corresponding tab on the course page, students can either create a new group or join an existing one, using the corresponding PIN. Groups can be formed until a pre-defined deadline, specified by the lecturer. These groups can solve group activities together, which are created by the lecturer and consist of a set of questions, explanation texts and hints, which are distributed across all participants, promoting collaboration. Group activities are only available in a limited time window and can only be solved once. Points are awarded for answering questions correctly. The points are added to the total participant score of the course and the group score on the group leaderboard.
+Through a tab on the course page, students can either create a new group or join an existing one, using the provided PIN. Groups can be formed until a pre-defined deadline, specified by the lecturer. These groups can solve group activities together, which are created by the lecturer and consist of a set of questions, explanation texts and hints, distributed across all participants, promoting collaboration. Group activities are only available in a limited time window and can only be solved once. Points are awarded for answering questions correctly.
 
-![Group Activity in Mobile View](/img_v3/10_group_activity.png)
+![Group Activity in Mobile View](/img_v3/10_group_overview.png)
+
+## Solve a Group Activity
+
+Once a group activity is published, students can access it from the course overview shown above. After the group activity and given that the group formation has been finalized, the students can "start" the group activity. Through this, the available hints will automatically be distributed between all group members. The students can then solve the questions together and submit their answers. The group activity will be automatically closed at the specified end date. After this date, participants will no longer be able to submit their answers.
+
+Please note that each group can only submit their answers once. After a successful submission, all group members will be able to see the submitted answers and grading decisions (once available) through their own account.
+
+![Group Activity Student View](/img_v3/15_group_activity_student_view.png)
+
+## View Group Activity Results
+
+After the group activity has ended and the lecturer has finalized the grading process, students can view the results of the group activity. On the evaluation view, students will be able to see all hints (not only their assigned ones) and the provided feedbacks and points as shown below. Answers will automatically be categorized into correct (full points), partially correct (partial points) and incorrect (no points).
+
+![Group Activity Evaluation](/img_v3/16_group_activity_graded_students.png)
