get list of users

--- a/apps/analytics/test.ipynb
+++ b/apps/analytics/test.ipynb
@@ -27,20 +27,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[User(id='76047345-3801-4628-ae7b-adbebcfe8821', originalId=None, name=None, email='lecturer@df.uzh.ch', emailVerified=None, sendProjectUpdates=False, image=None, shortname='lecturer', lastLoginAt=None, deletionToken=None, deletionRequestedAt=None, loginToken=None, loginTokenExpiresAt=None, locale='en', role='USER', catalystInstitutional=True, catalystIndividual=True, catalystTier=None, logins=None, session=None, accounts=None, courses=None, questions=None, mediaFiles=None, tags=None, questionInstances=None, sessions=None, groupActivities=None, elementInstances=None, practiceQuizzes=None, microLearnings=None, liveQuizzes=None, firstLogin=False, createdAt=datetime.datetime(2024, 8, 10, 13, 21, 37, 395000, tzinfo=TzInfo(UTC)), updatedAt=datetime.datetime(2024, 8, 10, 13, 21, 37, 395000, tzinfo=TzInfo(UTC))), User(id='76047345-3801-4628-ae7b-adbebcfe8822', originalId=None, name=None, email='free@df.uzh.ch', emailVerified=None, sendProjectUpdates=False, image=None, shortname='free', lastLoginAt=None, deletionToken=None, deletionRequestedAt=None, loginToken=None, loginTokenExpiresAt=None, locale='en', role='USER', catalystInstitutional=False, catalystIndividual=False, catalystTier=None, logins=None, session=None, accounts=None, courses=None, questions=None, mediaFiles=None, tags=None, questionInstances=None, sessions=None, groupActivities=None, elementInstances=None, practiceQuizzes=None, microLearnings=None, liveQuizzes=None, firstLogin=False, createdAt=datetime.datetime(2024, 8, 10, 13, 21, 37, 665000, tzinfo=TzInfo(UTC)), updatedAt=datetime.datetime(2024, 8, 10, 13, 21, 37, 665000, tzinfo=TzInfo(UTC))), User(id='76047345-3801-4628-ae7b-adbebcfe8823', originalId=None, name=None, email='pro1@df.uzh.ch', emailVerified=None, sendProjectUpdates=False, image=None, shortname='pro1', lastLoginAt=None, deletionToken=None, deletionRequestedAt=None, loginToken=None, loginTokenExpiresAt=None, locale='en', role='USER', catalystInstitutional=False, catalystIndividual=True, catalystTier=None, logins=None, session=None, accounts=None, courses=None, questions=None, mediaFiles=None, tags=None, questionInstances=None, sessions=None, groupActivities=None, elementInstances=None, practiceQuizzes=None, microLearnings=None, liveQuizzes=None, firstLogin=False, createdAt=datetime.datetime(2024, 8, 10, 13, 21, 37, 930000, tzinfo=TzInfo(UTC)), updatedAt=datetime.datetime(2024, 8, 10, 13, 21, 37, 930000, tzinfo=TzInfo(UTC))), User(id='76047345-3801-4628-ae7b-adbebcfe8824', originalId=None, name=None, email='pro2@df.uzh.ch', emailVerified=None, sendProjectUpdates=False, image=None, shortname='pro2', lastLoginAt=None, deletionToken=None, deletionRequestedAt=None, loginToken=None, loginTokenExpiresAt=None, locale='en', role='USER', catalystInstitutional=True, catalystIndividual=False, catalystTier=None, logins=None, session=None, accounts=None, courses=None, questions=None, mediaFiles=None, tags=None, questionInstances=None, sessions=None, groupActivities=None, elementInstances=None, practiceQuizzes=None, microLearnings=None, liveQuizzes=None, firstLogin=False, createdAt=datetime.datetime(2024, 8, 10, 13, 21, 38, 198000, tzinfo=TzInfo(UTC)), updatedAt=datetime.datetime(2024, 8, 10, 13, 21, 38, 198000, tzinfo=TzInfo(UTC)))]\n"
+      "[{'id': '76047345-3801-4628-ae7b-adbebcfe8821', 'originalId': None, 'name': None, 'email': 'lecturer@df.uzh.ch', 'emailVerified': None, 'sendProjectUpdates': False, 'image': None, 'shortname': 'lecturer', 'lastLoginAt': None, 'deletionToken': None, 'deletionRequestedAt': None, 'loginToken': None, 'loginTokenExpiresAt': None, 'locale': 'en', 'role': 'USER', 'catalystInstitutional': True, 'catalystIndividual': True, 'catalystTier': None, 'logins': None, 'session': None, 'accounts': None, 'courses': None, 'questions': None, 'mediaFiles': None, 'tags': None, 'questionInstances': None, 'sessions': None, 'groupActivities': None, 'elementInstances': None, 'practiceQuizzes': None, 'microLearnings': None, 'liveQuizzes': None, 'firstLogin': False, 'createdAt': datetime.datetime(2024, 8, 10, 13, 21, 37, 395000, tzinfo=TzInfo(UTC)), 'updatedAt': datetime.datetime(2024, 8, 10, 13, 21, 37, 395000, tzinfo=TzInfo(UTC))}, {'id': '76047345-3801-4628-ae7b-adbebcfe8822', 'originalId': None, 'name': None, 'email': 'free@df.uzh.ch', 'emailVerified': None, 'sendProjectUpdates': False, 'image': None, 'shortname': 'free', 'lastLoginAt': None, 'deletionToken': None, 'deletionRequestedAt': None, 'loginToken': None, 'loginTokenExpiresAt': None, 'locale': 'en', 'role': 'USER', 'catalystInstitutional': False, 'catalystIndividual': False, 'catalystTier': None, 'logins': None, 'session': None, 'accounts': None, 'courses': None, 'questions': None, 'mediaFiles': None, 'tags': None, 'questionInstances': None, 'sessions': None, 'groupActivities': None, 'elementInstances': None, 'practiceQuizzes': None, 'microLearnings': None, 'liveQuizzes': None, 'firstLogin': False, 'createdAt': datetime.datetime(2024, 8, 10, 13, 21, 37, 665000, tzinfo=TzInfo(UTC)), 'updatedAt': datetime.datetime(2024, 8, 10, 13, 21, 37, 665000, tzinfo=TzInfo(UTC))}, {'id': '76047345-3801-4628-ae7b-adbebcfe8823', 'originalId': None, 'name': None, 'email': 'pro1@df.uzh.ch', 'emailVerified': None, 'sendProjectUpdates': False, 'image': None, 'shortname': 'pro1', 'lastLoginAt': None, 'deletionToken': None, 'deletionRequestedAt': None, 'loginToken': None, 'loginTokenExpiresAt': None, 'locale': 'en', 'role': 'USER', 'catalystInstitutional': False, 'catalystIndividual': True, 'catalystTier': None, 'logins': None, 'session': None, 'accounts': None, 'courses': None, 'questions': None, 'mediaFiles': None, 'tags': None, 'questionInstances': None, 'sessions': None, 'groupActivities': None, 'elementInstances': None, 'practiceQuizzes': None, 'microLearnings': None, 'liveQuizzes': None, 'firstLogin': False, 'createdAt': datetime.datetime(2024, 8, 10, 13, 21, 37, 930000, tzinfo=TzInfo(UTC)), 'updatedAt': datetime.datetime(2024, 8, 10, 13, 21, 37, 930000, tzinfo=TzInfo(UTC))}, {'id': '76047345-3801-4628-ae7b-adbebcfe8824', 'originalId': None, 'name': None, 'email': 'pro2@df.uzh.ch', 'emailVerified': None, 'sendProjectUpdates': False, 'image': None, 'shortname': 'pro2', 'lastLoginAt': None, 'deletionToken': None, 'deletionRequestedAt': None, 'loginToken': None, 'loginTokenExpiresAt': None, 'locale': 'en', 'role': 'USER', 'catalystInstitutional': True, 'catalystIndividual': False, 'catalystTier': None, 'logins': None, 'session': None, 'accounts': None, 'courses': None, 'questions': None, 'mediaFiles': None, 'tags': None, 'questionInstances': None, 'sessions': None, 'groupActivities': None, 'elementInstances': None, 'practiceQuizzes': None, 'microLearnings': None, 'liveQuizzes': None, 'firstLogin': False, 'createdAt': datetime.datetime(2024, 8, 10, 13, 21, 38, 198000, tzinfo=TzInfo(UTC)), 'updatedAt': datetime.datetime(2024, 8, 10, 13, 21, 38, 198000, tzinfo=TzInfo(UTC))}]\n"
      ]
     }
    ],
    "source": [
     "users = db.user.find_many()\n",
+    "\n",
+    "users = list(map(lambda x: x.dict(), users))\n",
+    "\n",
     "print(users)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                     id originalId  name               email  \\\n",
+      "0  76047345-3801-4628-ae7b-adbebcfe8821       None  None  lecturer@df.uzh.ch   \n",
+      "1  76047345-3801-4628-ae7b-adbebcfe8822       None  None      free@df.uzh.ch   \n",
+      "2  76047345-3801-4628-ae7b-adbebcfe8823       None  None      pro1@df.uzh.ch   \n",
+      "3  76047345-3801-4628-ae7b-adbebcfe8824       None  None      pro2@df.uzh.ch   \n",
+      "\n",
+      "  emailVerified  sendProjectUpdates image shortname lastLoginAt deletionToken  \\\n",
+      "0          None               False  None  lecturer        None          None   \n",
+      "1          None               False  None      free        None          None   \n",
+      "2          None               False  None      pro1        None          None   \n",
+      "3          None               False  None      pro2        None          None   \n",
+      "\n",
+      "   ... questionInstances sessions groupActivities elementInstances  \\\n",
+      "0  ...              None     None            None             None   \n",
+      "1  ...              None     None            None             None   \n",
+      "2  ...              None     None            None             None   \n",
+      "3  ...              None     None            None             None   \n",
+      "\n",
+      "  practiceQuizzes  microLearnings  liveQuizzes firstLogin  \\\n",
+      "0            None            None         None      False   \n",
+      "1            None            None         None      False   \n",
+      "2            None            None         None      False   \n",
+      "3            None            None         None      False   \n",
+      "\n",
+      "                         createdAt                        updatedAt  \n",
+      "0 2024-08-10 13:21:37.395000+00:00 2024-08-10 13:21:37.395000+00:00  \n",
+      "1 2024-08-10 13:21:37.665000+00:00 2024-08-10 13:21:37.665000+00:00  \n",
+      "2 2024-08-10 13:21:37.930000+00:00 2024-08-10 13:21:37.930000+00:00  \n",
+      "3 2024-08-10 13:21:38.198000+00:00 2024-08-10 13:21:38.198000+00:00  \n",
+      "\n",
+      "[4 rows x 35 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(users)\n",
+    "print(df.head())"
    ]
   },
   {
