chore: add intermediate headers for understandability to jupyter notebook

--- a/apps/analytics/daily_participant_analytics.ipynb
+++ b/apps/analytics/daily_participant_analytics.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preparation & Data Fetching"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -57,6 +64,13 @@
     "# Print the first 5 question response details\n",
     "print(\"Found {} question response details for {}\".format(len(participant_repsonse_details), specific_date))\n",
     "print(participant_repsonse_details[0])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Compute Correctness Metrics for Responses"
    ]
   },
   {
@@ -172,6 +186,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Aggregate Metrics and Counts for Responses"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -240,6 +261,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Add Computed Metrics to the Database"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -285,11 +313,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleanup"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "db.disconnect()"
+   ]
   }
  ],
  "metadata": {
