chore: fix logging and options initialization

--- a/apps/analytics/daily_participant_analytics.ipynb
+++ b/apps/analytics/daily_participant_analytics.ipynb
@@ -62,7 +62,7 @@
     ")\n",
     "\n",
     "# Print the first 5 question response details\n",
-    "print(\"Found {} question response details for {}\".format(len(participant_response_details), specific_date))\n",
+    "print(\"Found {} participants for the timespan from {} to {}\".format(len(participant_response_details), date_start, date_end))\n",
     "print(participant_response_details[0])\n"
    ]
   },
@@ -125,7 +125,7 @@
     "    return {\n",
     "        'elementInstanceId': instance_dict['id'],\n",
     "        'type': instance_dict['elementData']['type'],\n",
-    "        'options': instance_dict['elementData']['options']\n",
+    "        'options': instance_dict['elementData']['options'] if 'options' in instance_dict['elementData'] else None\n",
     "    }\n",
     "\n",
     "df_element_instances = pd.DataFrame(list(map(map_element_instance_options, element_instances)))\n",
