refactor: extract remaining logic to functions

--- a/apps/analytics/src/notebooks/participant_analytics.ipynb
+++ b/apps/analytics/src/notebooks/participant_analytics.ipynb
@@ -40,7 +40,23 @@
     "# set the environment variable DATABASE_URL to the connection string of your database\n",
     "os.environ['DATABASE_URL'] = 'postgresql://klicker:klicker@localhost:5432/klicker-prod'\n",
     "\n",
-    "db.connect()"
+    "db.connect()\n",
+    "\n",
+    "# Script settings\n",
+    "verbose = False\n",
+    "\n",
+    "# Settings which analytics to compute\n",
+    "compute_daily = True\n",
+    "compute_weekly = False\n",
+    "compute_monthly = False\n",
+    "compute_course = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Daily Analytics"
    ]
   },
   {
@@ -49,26 +65,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Script settings\n",
-    "verbose = True\n",
+    "# Print all dates between the 2022-10-23 and today\n",
+    "# TODO: select this start date again (caution: computations take longer...)\n",
+    "# start_date = '2022-10-23'\n",
+    "start_date = '2024-06-20'\n",
+    "end_date = datetime.now().strftime('%Y-%m-%d')\n",
+    "date_range = pd.date_range(start=start_date, end=end_date, freq='D')\n",
     "\n",
-    "# Fetch all question response detail entries for a specific day\n",
-    "specific_date = '2024-06-10'\n",
-    "start_date = specific_date + 'T00:00:00.000Z'\n",
-    "end_date = specific_date + 'T23:59:59.999Z'\n",
-    "participant_response_details = get_participant_responses(db, start_date, end_date, verbose)\n",
+    "if compute_daily:\n",
+    "    # Iterate over the date range and compute the participant analytics for each day\n",
+    "    for curr_date in date_range:\n",
+    "        print(f'Computing participant analytics for {curr_date.strftime('%Y-%m-%d')}')\n",
+    "        specific_date = curr_date.strftime('%Y-%m-%d')\n",
     "\n",
-    "# Compute the correctness of each question response detail\n",
-    "df_details, df_element_instances = compute_correctness(db, participant_response_details, verbose)\n",
+    "        # Fetch all question response detail entries for a specific day\n",
+    "        start_date = specific_date + 'T00:00:00.000Z'\n",
+    "        end_date = specific_date + 'T23:59:59.999Z'\n",
+    "        participant_response_details = get_participant_responses(db, start_date, end_date, verbose)\n",
     "\n",
-    "# Compute participant analytics (score/xp counts and correctness statistics)\n",
-    "df_analytics = aggregate_analytics(df_details, verbose)\n",
-    "if verbose:\n",
-    "    df_analytics.head()\n",
+    "        # Compute the correctness of each question response detail\n",
+    "        df_details, df_element_instances = compute_correctness(db, participant_response_details, verbose)\n",
     "\n",
-    "# Save the aggreagted analytics into the database\n",
-    "timestamp = specific_date + 'T00:00:00.000Z'\n",
-    "save_participant_analytics(db, df_analytics, timestamp, 'DAILY')"
+    "        if df_details is None:\n",
+    "            print(f'No participant responses found for {specific_date}')\n",
+    "            continue\n",
+    "\n",
+    "        # Compute participant analytics (score/xp counts and correctness statistics)\n",
+    "        df_analytics = aggregate_analytics(df_details, verbose)\n",
+    "        if verbose:\n",
+    "            df_analytics.head()\n",
+    "\n",
+    "        # Save the aggreagted analytics into the database\n",
+    "        timestamp = specific_date + 'T00:00:00.000Z'\n",
+    "        save_participant_analytics(db, df_analytics, timestamp, 'DAILY')\n",
+    "\n",
+    "        # Delete the dataframes to avoid conflicts in the next iteration\n",
+    "        del df_details\n",
+    "        del df_element_instances\n",
+    "        del df_analytics\n"
    ]
   },
   {
