--- a/apps/analytics/src/notebooks/participant_analytics.ipynb
+++ b/apps/analytics/src/notebooks/participant_analytics.ipynb
@@ -26,7 +26,8 @@
     "from src.modules.participant_analytics.compute_correctness import compute_correctness\n",
     "from src.modules.participant_analytics.get_participant_responses import get_participant_responses\n",
     "from src.modules.participant_analytics.aggregate_analytics import aggregate_analytics\n",
-    "from src.modules.participant_analytics.save_participant_analytics import save_participant_analytics\n"
+    "from src.modules.participant_analytics.save_participant_analytics import save_participant_analytics\n",
+    "from src.modules.participant_analytics.compute_participant_analytics import compute_participant_analytics\n"
    ]
   },
   {
@@ -46,7 +47,7 @@
     "verbose = False\n",
     "\n",
     "# Settings which analytics to compute\n",
-    "compute_daily = True\n",
+    "compute_daily = False\n",
     "compute_weekly = False\n",
     "compute_monthly = False\n",
     "compute_course = False"
@@ -56,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Daily Analytics"
+    "## Daily / Weekly / Monthly Analytics"
    ]
   },
   {
@@ -66,43 +67,49 @@
    "outputs": [],
    "source": [
     "# Print all dates between the 2022-10-23 and today\n",
-    "# TODO: select this start date again (caution: computations take longer...)\n",
-    "# start_date = '2022-10-23'\n",
-    "start_date = '2024-06-20'\n",
+    "start_date = '2022-10-01'\n",
     "end_date = datetime.now().strftime('%Y-%m-%d')\n",
-    "date_range = pd.date_range(start=start_date, end=end_date, freq='D')\n",
+    "date_range_daily = pd.date_range(start=start_date, end=end_date, freq='D')\n",
+    "date_range_weekly = pd.date_range(start=start_date, end=end_date, freq='W')\n",
+    "date_range_monthly = pd.date_range(start=start_date, end=end_date, freq='ME')\n",
     "\n",
     "if compute_daily:\n",
     "    # Iterate over the date range and compute the participant analytics for each day\n",
-    "    for curr_date in date_range:\n",
-    "        print(f'Computing participant analytics for {curr_date.strftime('%Y-%m-%d')}')\n",
+    "    for curr_date in date_range_daily:\n",
+    "        print(f'Computing daily participant analytics for {curr_date.strftime('%Y-%m-%d')}')\n",
     "        specific_date = curr_date.strftime('%Y-%m-%d')\n",
     "\n",
     "        # Fetch all question response detail entries for a specific day\n",
     "        start_date = specific_date + 'T00:00:00.000Z'\n",
     "        end_date = specific_date + 'T23:59:59.999Z'\n",
-    "        participant_response_details = get_participant_responses(db, start_date, end_date, verbose)\n",
     "\n",
-    "        # Compute the correctness of each question response detail\n",
-    "        df_details, df_element_instances = compute_correctness(db, participant_response_details, verbose)\n",
+    "        # Compute participant analytics for a specific day\n",
+    "        timestamp = start_date\n",
+    "        compute_participant_analytics(db, start_date, end_date, timestamp, \"DAILY\", verbose)\n",
     "\n",
-    "        if df_details is None:\n",
-    "            print(f'No participant responses found for {specific_date}')\n",
-    "            continue\n",
+    "if compute_weekly:\n",
+    "    # Iterate over the date range and compute the participant analytics for each week\n",
+    "    for curr_date in date_range_weekly:\n",
+    "        # Fetch all question response detail entries for a specific week\n",
+    "        end_date = curr_date.strftime('%Y-%m-%d') + 'T23:59:59.999Z'\n",
+    "        start_date = (curr_date - pd.DateOffset(days=6)).strftime('%Y-%m-%d') + 'T00:00:00.000Z'\n",
+    "        print(f'Computing weekly participant analytics for {start_date} to {end_date}')\n",
     "\n",
-    "        # Compute participant analytics (score/xp counts and correctness statistics)\n",
-    "        df_analytics = aggregate_analytics(df_details, verbose)\n",
-    "        if verbose:\n",
-    "            df_analytics.head()\n",
+    "        # Compute participant analytics for a specific week\n",
+    "        timestamp = end_date\n",
+    "        compute_participant_analytics(db, start_date, end_date, timestamp, \"WEEKLY\", verbose)\n",
     "\n",
-    "        # Save the aggreagted analytics into the database\n",
-    "        timestamp = specific_date + 'T00:00:00.000Z'\n",
-    "        save_participant_analytics(db, df_analytics, timestamp, 'DAILY')\n",
+    "if compute_monthly:\n",
+    "    # Iterate over the date range and compute the participant analytics for each month\n",
+    "    for curr_date in date_range_monthly:\n",
+    "        # Fetch all question response detail entries for a specific month\n",
+    "        end_date = curr_date.strftime('%Y-%m-%d') + 'T23:59:59.999Z'\n",
+    "        start_date = (curr_date - pd.offsets.MonthBegin(1)).strftime('%Y-%m-%d') + 'T00:00:00.000Z'\n",
+    "        print(f'Computing monthly participant analytics for {start_date} to {end_date}')\n",
     "\n",
-    "        # Delete the dataframes to avoid conflicts in the next iteration\n",
-    "        del df_details\n",
-    "        del df_element_instances\n",
-    "        del df_analytics\n"
+    "        # Compute participant analytics for a specific month\n",
+    "        timestamp = end_date\n",
+    "        compute_participant_analytics(db, start_date, end_date, timestamp, \"MONTHLY\", verbose)\n"
    ]
   },
   {
