enhance: compute course-wide analytics analogously as for daily, weekly and monthly statistics

--- a/apps/analytics/src/notebooks/participant_analytics.ipynb
+++ b/apps/analytics/src/notebooks/participant_analytics.ipynb
@@ -27,7 +27,8 @@
     "from src.modules.participant_analytics.get_participant_responses import get_participant_responses\n",
     "from src.modules.participant_analytics.aggregate_analytics import aggregate_analytics\n",
     "from src.modules.participant_analytics.save_participant_analytics import save_participant_analytics\n",
-    "from src.modules.participant_analytics.compute_participant_analytics import compute_participant_analytics\n"
+    "from src.modules.participant_analytics.compute_participant_analytics import compute_participant_analytics\n",
+    "from src.modules.participant_analytics.compute_participant_course_analytics import compute_participant_course_analytics\n"
    ]
   },
   {
@@ -47,10 +48,10 @@
     "verbose = False\n",
     "\n",
     "# Settings which analytics to compute\n",
-    "compute_daily = False\n",
-    "compute_weekly = False\n",
-    "compute_monthly = False\n",
-    "compute_course = False"
+    "compute_daily = True\n",
+    "compute_weekly = True\n",
+    "compute_monthly = True\n",
+    "compute_course = True"
    ]
   },
   {
@@ -110,6 +111,43 @@
     "        # Compute participant analytics for a specific month\n",
     "        timestamp = end_date\n",
     "        compute_participant_analytics(db, start_date, end_date, timestamp, \"MONTHLY\", verbose)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Course-Wide Participant Analytics (update daily?)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fetch all ongoing / past courses\n",
+    "if compute_course:\n",
+    "    curr_date = '2024-08-27'\n",
+    "    courses = db.course.find_many(\n",
+    "        where={\n",
+    "            # Incremental scripts can add this statement to reduce the amount of required computations\n",
+    "            # 'endDate': {\n",
+    "            #     'gt': datetime.now().strftime('%Y-%m-%d') + 'T00:00:00.000Z'\n",
+    "            # }\n",
+    "            'startDate': {\n",
+    "                'lte': curr_date + 'T23:59:59.999Z'\n",
+    "            }\n",
+    "        }\n",
+    "    )\n",
+    "\n",
+    "    df_courses = pd.DataFrame(list(map(lambda x: x.dict(), courses)))\n",
+    "    print(\"Found {} courses with a start date before {}\".format(len(df_courses), curr_date))\n",
+    "\n",
+    "    courses_without_responses = compute_participant_course_analytics(db, df_courses, verbose)\n",
+    "\n",
+    "    print(\"Found {} courses without any responses\".format(courses_without_responses))\n",
+    "        "
    ]
   },
   {
