--- a/apps/analytics/src/notebooks/archive/daily_participant_analytics.ipynb
+++ b/apps/analytics/src/notebooks/archive/daily_participant_analytics.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Preparation & Data Fetching"
+    "## Preparation & Data Fetching (slightly outdated)\n",
+    "\n",
+    "New version (participant_analytics) takes into account the course start and end dates to limit the computational cost."
    ]
   },
   {
