--- a/packages/i18n/tsconfig.json
+++ b/packages/i18n/tsconfig.json
@@ -1,7 +1,5 @@
 {
-  "include": [
-    "**/**/*",
-  ],
+  "include": ["**/**/*"],
   "compilerOptions": {
     "baseUrl": ".",
     /* Base Options: */
@@ -27,10 +25,6 @@
     "composite": true,
     "declarationMap": true,
     /* If your code runs in the DOM: */
-    "lib": [
-      "es2022",
-      "dom",
-      "dom.iterable"
-    ],
+    "lib": ["es2022", "dom", "dom.iterable"]
   }
 }
