enhance: extend documentation with new features and introduce explanation of available element types

--- a/apps/docs/docs/tutorials/microlearning.mdx
+++ b/apps/docs/docs/tutorials/microlearning.mdx
@@ -43,14 +43,19 @@ Microlearning offers short learning units with a limited number of questions, pu
 
 **Choose your questions:**
 
-For this step, existing questions are required. Note that for Microlearning and Practice Quizzes, only choice-based questions can be implemented. If you need help with creating questions, please review the Question Management tutorial (verlinken).
+For this step, existing questions are required. Note that Microlearning and Practice Quizzes support all element types except from free-text questions, as long as a valid sample solution is specified. If you need help with creating questions or content elements / flashcards, please review the [tutorial on element management](/tutorials/element_management/).
+When adding questions, you can choose to have one or multiple questions per stack. It makes sense to have several questions per stack if you provide your students with a task / case study that builds up and the questions are connected. Stacks in practice quizzes can optionally be ordered according to a spaced repetition logic based on the student’s individual responses, while questions within a stack will always be shown in sequence.
 
-7. Questions: The desired question can be added to the session by simply dragging the question onto the plus sign.
+There are multiple options to add a question to a stack:
+
+7. Drag & Drop: The desired question can be added to a specific stack by simply dragging the question onto the plus sign below the desired stack.
 8. Arrows: With the help of the arrows, the arrangement of the questions can be put in the desired order.
+9. Select: It is also possible to select one or more questions (with the checkboxes next to them) and insert them into the desired stack or stacks by clicking on the yellow boxes that appear on selection. In this way, questions can be grouped and/or stacked for sequential presentation.
+10. Ordering: To order individual elements within a certain stack or move entire stacks (mainly for sequentially ordered practice quizzes), please use the provided arrows.
 
 **End of preparation:**
 
-9. With a click on Create your first Microlearning session is prepared!
+11. With a click on Create your first Microlearning session is prepared!
 
 ## How can I publish a Microlearning and make it accessible to participants?
 
