--- a/apps/docs/docs/tutorials/practice_quiz.mdx
+++ b/apps/docs/docs/tutorials/practice_quiz.mdx
@@ -40,20 +40,26 @@ The Practice Quiz activity consists of longer question sets that specifically ta
 **Adjust the settings:**
 
 4. Course: In this field, the Practice Quiz has to be assigned to a course. Note that this is different from the Live Quiz, which can be run independently from a course. If you need help creating a course, please review the Course Management tutorial (verlinken).
-5. Multiplier: The multiplier is a factor with which the points are multiplied when a question is answered. A factor above 1 is only used if gamification is activated .
+5. Multiplier: The multiplier is a factor with which the awarded points are multiplied when a question is answered. This field is only available if the practice quiz is included in a gamified course and participants collect points for correct answers.
 6. Repetition interval: Practice Quizzes are characterized by their spaced repetition. Here, the period is chosen after which the participants can repeat the Quiz.
 7. Order: The order in which the questions are to be solved by the participants is selected here. It is possible to choose between the following setups: Last response first, sequential or shuffled.
+8. Availability (optional): Specify an optional start date from which the practice quiz is available after publication (default: immediately after publication). If the chosen date lies in the future and the practice quiz is published before, it will be available to students per the set start date. Should you not wish to use this option, simply leave the field value at its default value and the practice quiz will become available at the moment you publish it on the course overview after creation.
 
 **Choose your questions:**
 
-For this step, existing questions are required. Note that for Microlearning and Practice Quizzes, only choice-based and numerical questions can be implemented (no free-text). If you need help with creating questions, please review the Question Management tutorial (verlinken).
+For this step, existing questions are required. Note that Microlearning and Practice Quizzes support all element types except from free-text questions, as long as a valid sample solution is specified. If you need help with creating questions or content elements / flashcards, please review the [tutorial on element management](/tutorials/element_management/).
+When adding questions, you can choose to have one or multiple questions per stack. It makes sense to have several questions per stack if you provide your students with a task / case study that builds up and the questions are connected. Stacks in practice quizzes can optionally be ordered according to a spaced repetition logic based on the student’s individual responses, while questions within a stack will always be shown in sequence.
 
-8. Questions: The desired question can be added to the session by simply dragging the question onto the plus sign.
-9. Arrows: With the help of the arrows, the arrangement of the questions can be put in the desired order.
+There are multiple options to add a question to a stack:
+
+9. Drag & Drop: The desired question can be added to a specific stack by simply dragging the question onto the plus sign below the desired stack.
+10. Arrows: With the help of the arrows, the arrangement of the questions can be put in the desired order.
+11. Select: It is also possible to select one or more questions (with the checkboxes next to them) and insert them into the desired stack or stacks by clicking on the yellow boxes that appear on selection. In this way, questions can be grouped and/or stacked for sequential presentation.
+12. Ordering: To order individual elements within a certain stack or move entire stacks (mainly for sequentially ordered practice quizzes), please use the provided arrows.
 
 **End of preparation:**
 
-10. With a click on Create your first Practice Quiz is prepared!
+13. With a click on Create your first Practice Quiz is prepared!
 
 ## How can I publish a Practice Quiz and make it accessible to participants?
 
